# fragalysis-ispyb-target-access-authenticator

./: .pre-commit-config.yaml  DESIGN.md  Dockerfile  README.md  base-services.yml  clear.py  docker-compose-private-key.yml  docker-compose.yml  docker-entrypoint.sh  get.py  logging.config  pyproject.toml  stats.py  tas.py
.github/workflows/: build.yaml  tag.yaml
app/: app.py  common.py  config.py  prometheus_metrics.py  remote_ispyb_connector.py
probes/: liveness.sh  readiness.sh
