[tool.poetry]
name = "fragalysis-ispyb-target-access-authenticator"
version = "0.1.0"
package-mode = false
description = "The Fragalysis Stack Python/FastAPI ISPyB Target Access Authenticator"
authors = ["Alan Christie <achristie@einformaticsmatters.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# Locked versions (for now)
fastapi = "0.115.8"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
# Must avoid paramiko 4.0 (pulled in by others)
paramiko = "^3.5.1"
# We're stuck on ISPyB 4.x to avoid the error: -
#   ImportError: cannot import name 'ISPyBNoResultException' from 'ispyb.connector.mysqlsp.main'
ispyb = "4.13.2"
# ispyb (4.13.2) depends on mysql-connector (<2.2.3)
mysql-connector = "2.1.7"
# Flexible versions
humanize = "^4.12.3"
prometheus-client = "^0.22.1"
pymemcache = "^4.0.0"
pydantic = "^2.10.6"
pymysql = "^1.1.1"
python = "^3.12"
python-dateutil = "^2.9.0"
requests = "^2.32.4"
sshtunnel = "^0.4.0"

[tool.poetry.group.dev.dependencies]
httpie = "^3.2.4"
pre-commit = "^4.2.0"
pylint = "^3.3.7"
isort = "^6.0.1"
black = "^25.1.0"

[tool.pylint.'MESSAGES CONTROL']
disable = "duplicate-code,too-many-boolean-expressions,too-few-public-methods,too-many-arguments,too-many-positional-arguments,missing-function-docstring,missing-module-docstring,missing-class-docstring"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
